--- a/css/application.css
+++ b/css/application.css
@@ -3,30 +3,18 @@
     margin: 0 auto;
 }
 
-.mt-1,
-.mb-1 {
-    margin-top: 0.25rem;
-}
+.mt-1 { margin-top: 0.25rem; }
+.mt-2 { margin-top: 0.5rem; }
+.mt-3 { margin-top: 1rem; }
+.mt-4 { margin-top: 1.5rem; }
+.mt-5 { margin-top: 3rem; }
 
-.mt-2,
-.mb-2 {
-    margin-top: 0.5rem;
-}
+.mb-1 { margin-bottom: 0.25rem; }
+.mb-2 { margin-bottom: 0.5rem; }
+.mb-3 { margin-bottom: 1rem; }
+.mb-4 { margin-bottom: 1.5rem; }
+.mb-5 { margin-bottom: 3rem; }
 
-.mt-3,
-.mb-3 {
-    margin-top: 1rem;
-}
-
-.mt-4,
-.mb-4 {
-    margin-top: 1.5rem;
-}
-
-.mt-5,
-.mb-5 {
-    margin-top: 3rem;
-}
 
 #user-create-wrapper {
     margin-top: 50px;
